--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{background-color: lightgray;
     font-family: verdana;
 color:rgb(22, 22, 189)}
-h2, p2{text-align: center;}
+h2, p{text-align: center;}
 #d1{width:40%;
     border: double 5px maroon;
     margin:auto}
